# check-sql-with-opa

./: .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml
policies/: bad_sql.rego
src/: main.rs
