[package]
name = "check-sql-with-opa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
hyper = { version = "0.14.18", features = ["full"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
sqlparser = { version = "0.17.0", features = ["serde"] }
tokio = { version = "1.18.2", features = ["full"] }
